@@ -1,5 +1,11 @@
 2009-11-18  Alberto Garcia  <agarcia@igalia.com>
 
+	* src/vgl-main-window.c (vgl_main_window_init):
+	Add a border to the contents of the main window excluding the menu
+	bar.
+
+2009-11-18  Alberto Garcia  <agarcia@igalia.com>
+
 	* src/audio.c (get_audio_thread, gst_eos_handler, bus_call):
 	Change method use to compute the number of failed tracks.
 
